[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/images/catan_background.jpeg" type="Texture" id=2]
[ext_resource path="res://assets/images/logo.png" type="Texture" id=3]
[ext_resource path="res://main.gd" type="Script" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="BackgroundRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.36901
anchor_top = 0.121296
anchor_right = 0.62474
anchor_bottom = 0.358333
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VCon" type="VBoxContainer" parent="."]
margin_left = 216.0
margin_top = 536.0
margin_right = 516.0
margin_bottom = 936.0
custom_constants/separation = 30

[node name="StartGameBtn" type="Button" parent="VCon"]
margin_right = 300.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "开始游戏"

[node name="CharacterBtn" type="Button" parent="VCon"]
margin_top = 86.0
margin_right = 300.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "角色信息"

[node name="SettingBtn" type="Button" parent="VCon"]
margin_top = 172.0
margin_right = 300.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "游戏设置"

[node name="EditorBtn" type="Button" parent="VCon"]
margin_top = 258.0
margin_right = 300.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "地图编辑"

[node name="ExitBtn" type="Button" parent="VCon"]
margin_top = 344.0
margin_right = 300.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "退出游戏"

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -309.0
margin_top = -66.0
theme_type_variation = "BigLabel"
text = "版本号: 1.2"
align = 1

[connection signal="button_down" from="VCon/StartGameBtn" to="." method="_on_start_game"]
[connection signal="button_down" from="VCon/CharacterBtn" to="." method="_on_edit_character_info"]
[connection signal="button_down" from="VCon/SettingBtn" to="." method="_on_edit_setting"]
[connection signal="button_down" from="VCon/EditorBtn" to="." method="_on_open_editor"]
[connection signal="button_down" from="VCon/ExitBtn" to="." method="_on_exit_game"]
